# elevator-button-robot

./: LICENSE  README.md
nodes/: isaac_sim_analytical_ik_moveit.py  isaac_sim_yolo_moveit.py  isaac_sim_yolo_test.py  pid_joint_controller.py  real_robot_yolo_moveit.py
nodes/real_robot/: contact_detector.py  real_robot_cartesian.py  real_robot_direct_ik.py  real_robot_gemini_vlm.py  real_robot_num_ocr.py  real_robot_num_ocr_ik.py  real_robot_unified.py  test_gemini_detection.py
nodes/simulation/: isaac_sim_analytical_ik_moveit.py  isaac_sim_cartesian.py  isaac_sim_direct_ik.py  isaac_sim_ik.py  isaac_sim_yolo_depth.py  isaac_sim_yolo_tf.py
nodes/test/: webcam_ocr_test.py
ros2_packages/isaac_moveit_bridge/: package.xml  setup.cfg  setup.py
ros2_packages/isaac_moveit_bridge/isaac_moveit_bridge/: bridge.py
ros2_packages/open_manipulator_patches/: README.md
ros2_packages/open_manipulator_patches/open_manipulator_x_description/launch/: isaac_sim_tf.launch.py
ros2_packages/open_manipulator_patches/open_manipulator_x_description/urdf/: open_manipulator_x_with_camera.urdf  open_manipulator_x_with_camera.urdf.xacro  stand_rs-d435_s01.stl
yolo/dataset/: README.dataset.txt  data.yaml
