<?xml version="1.0"?>
<package format="3">
  <name>isaac_moveit_bridge</name>
  <version>0.0.1</version>
  <description>Bridge between MoveIt2 and Isaac Sim</description>
  <maintainer email="test@test.com">test</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
